get State ability

--- a/src/main/resources/static/game.html
+++ b/src/main/resources/static/game.html
@@ -103,9 +103,9 @@
 				<input type="range" class="range" name="" value="0" min="0" max="1000" onchange="rangeSlide(this.value)"
 					onmousemove="rangeSlide(this.value)">
 			</div>
-			<div class="timer-container">
-
-			</div>
+			<span class="room-timer">
+				30
+			</span>
 		</div>
 
 	</div>
