--- a/src/main/resources/static/game.html
+++ b/src/main/resources/static/game.html
@@ -7,6 +7,10 @@
 	<title>Pockerface</title>
 	<link rel="stylesheet" href="css/game_style.css">
 	<link rel="stylesheet" href="css/timer.css">
+
+	<script src="/webjars/sockjs-client/sockjs.min.js"></script>
+	<script src="/webjars/stomp-websocket/stomp.min.js"></script>
+
 </head>
 
 <body>
