--- a/src/main/resources/static/game.html
+++ b/src/main/resources/static/game.html
@@ -16,8 +16,8 @@
 <body>
 	<div class="wrapper">
 		<div class="btn-container2">
-			<a class="btn" onclick="gotoMainMenu()">escape</a>
-			<a class="btn" onclick="getCards()">watch</a>
+			<a class="btn" onclick="escapeRoom()">escape</a>
+			<a class="btn" onclick="getUp()">get up</a>
 			<span class="player-place room-pot" style="width: 120px; height: 50px; left: 760px; line-height: 40px;">
 				0
 			</span>
